Bump version to 0.4.0-SNAPSHOT and update Maven repository settings; enhance documentation for Erebus and ArtifactSearcher